Node status updates and some bug fixes (align FF UI with chrome) (#2463)
* Add validation for cloud sync frequency

Must be a number that is greater or equal to 1

* Enhance node status in pool list

* Enhanced node status in node page

* Remove debug logging

* Fix a bunch of FF visual glitches

Fixes #2436
Fixes #2326
Fixes #2166

* Remove unused import

* Fix some visual issues

--- a/frontend/src/app/components/layout/main-nav/main-nav.less
+++ b/frontend/src/app/components/layout/main-nav/main-nav.less
@@ -64,12 +64,19 @@ main-nav {
 
     .uploads {
         position: relative;
-        margin: 0 @gutter/2;
+        margin-left: 0;
+        width: 42px;
+        margin: 0 auto;
+
+        > svg-icon {
+            margin: 0 auto;
+        }
 
         > bar {
             margin: @gutter/2 0;
             height: 1px;
             width: 42px;
+            border-radius: 0;
         }
 
         > .anim {
