--- a/frontend/src/app/components/overview/install-node-modal/install-node-modal.less
+++ b/frontend/src/app/components/overview/install-node-modal/install-node-modal.less
@@ -2,5 +2,10 @@ install-node-modal {
     .config-box {
         word-wrap: break-word;
         word-break: break-all;
+        margin-bottom: @gutter/2;
+
+        .text-tech {
+            font-size: @font-size1;
+        }
     }
 }
