--- a/frontend/src/app/components/shared/password-field/password-field.less
+++ b/frontend/src/app/components/shared/password-field/password-field.less
@@ -9,7 +9,9 @@ password-field {
 
     .eye-button {
         position: absolute;
-        right: @gutter;
+        right: @gutter/4;
+        top: 0;
+        margin: @gutter/2;
     }
 
     bar {
